--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "name" : "My budget",
-    "short_name" :"My app",
+    "short_name" :"MyBudget",
     "start_url" : ".",
     "background_color": "#fff",
-    "theme_color": "#34006a",
-    "display": "standalone",
+    "theme_color": "#000000",
+    "display": "fullscreen",
     "icons": [
         {
           "src": "icon/logo64.png",
