--- a/manifest.json
+++ b/manifest.json
@@ -1,10 +1,10 @@
 {
     "name" : "My budget",
     "short_name" :"MyBudget",
-    "start_url" : ".",
+    "start_url" : "index.html",
     "background_color": "#fff",
-    "theme_color": "#000000",
-    "display": "fullscreen",
+    "theme_color": "#26014c",
+    "display": "standalone",
     "icons": [
         {
           "src": "icon/logo64.png",
@@ -15,6 +15,11 @@
           "src": "icon/logo512.png",
           "type": "image/png",
           "sizes": "512x512"
+        },
+        {
+          "src": "icon/logo192.png",
+          "type": "image/png",
+          "sizes": "192x192"
         }
     ]
 
